[package]
name = "cellular_automata_1d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools ="0.12.0"
iced = { version = "0.12.1", features = ["canvas", "tokio", "debug"]}   
rand ="0.8.5"
env_logger = "0.11.3"

