# CMakeList.txt : CMake project for CellularAutomata, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CellularAutomata "CellularAutomata1D.cpp" "CellularAutomata1D.h")

# TODO: Add tests and install targets if needed.
